welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:3: error: value lenght is not a member of Array[Int]
  var n:Int = nums.lenght
                   ^occurrences:5: error: not found: value T
    if (T(k)==lookingFor){
        ^