welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  var compt:Int=0
  var n:Int = nums.lenght
  for (k<-0 to n-1){
    if (T(k)==lookingFor){
      compt=compt+1
    }
    else compt=compt      
  }
  return compt
}